# java-ripgrep

./: .gitignore  Cargo.toml  README.md  TODO.md  pom.xml
src/: lib.rs  main.rs
src/main/java/com/brownian/demos/ripgrep/: Main.java  MainWithGui.java  Ripgrep.java  RipgrepNativeMapping.java  RipgrepSearcher.java
src/main/resources/: bee_movie.txt
src/main/rust/: ffi.rs  lib.rs  main.rs  parse.rs  types.rs
src/main/rust/tests/: mod.rs  search_dir.rs  search_file.rs
src/test/java/com/brownian/demos/ripgrep/: RipgrepNativeMappingTest.java  RipgrepSearcherTest.java  RipgrepTest.java
