[package]
name = "ripgrep_test_playground"
version = "0.1.0"
authors = ["JJ Brown <jack.brown.255@gmail.com>"]
edition = "2018"
exclude = ["**/*"]
include = ["Cargo.toml", "src/*/rust/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grep = "0.2"

[lib]
crate-type = ['dylib']
path = 'src/main/rust/lib.rs'