[package]
name = "ripgrep_ffi"
version = "0.1.0"
authors = ["JJ Brown <jack.brown.255@gmail.com>"]
edition = "2018"
exclude = ["**/*"]
include = ["Cargo.toml", "src/*/rust/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grep = "0.2"
walkdir = "2"

[lib]
crate-type = ['dylib']
path = 'src/main/rust/lib.rs'

[[bin]]
name = 'find_bees'
path = 'src/main/rust/main.rs'